<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/pet_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            tools:src="@tools:sample/backgrounds/scenic"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/pet_name"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageButton
                app:layout_constraintLeft_toRightOf="@id/pet_name"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginVertical="20dp"
                android:id="@+id/maps_button"
                android:background="@drawable/images_background"
                android:layout_width="100dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_height="100dp"
                android:src="@drawable/planeta_tierra"
                android:contentDescription="@string/go_to_google_maps"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/pet_scientific_name"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_marginVertical="20dp"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_primary"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            android:text="@string/scientific_name"/>

        <CheckBox
            android:id="@+id/favorite_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:textSize="16sp"
            android:text="@string/checkbox_favourite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/button_edit" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="0dp"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_delete" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
